--- a/SpamDetector.ipynb
+++ b/SpamDetector.ipynb
@@ -302,7 +302,7 @@
     {
      "data": {
       "text/plain": [
-       "(5572, 8404)"
+       "(5572, 8402)"
       ]
      },
      "execution_count": 7,
@@ -311,6 +311,7 @@
     }
    ],
    "source": [
+    "data[\"v2\"][0] = \" \"\n",
     "f = feature_extraction.text.CountVectorizer(stop_words = 'english')\n",
     "X = f.fit_transform(data[\"v2\"])\n",
     "np.shape(X)"
@@ -332,7 +333,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(3733, 8404), (1839, 8404)]\n"
+      "[(3733, 8402), (1839, 8402)]\n"
      ]
     }
    ],
@@ -432,14 +433,14 @@
        "      <th>2</th>\n",
        "      <td>0.22001</td>\n",
        "      <td>0.997857</td>\n",
-       "      <td>0.977162</td>\n",
+       "      <td>0.977705</td>\n",
        "      <td>0.936508</td>\n",
-       "      <td>0.900763</td>\n",
+       "      <td>0.904215</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.33001</td>\n",
-       "      <td>0.997589</td>\n",
+       "      <td>0.997857</td>\n",
        "      <td>0.977162</td>\n",
        "      <td>0.936508</td>\n",
        "      <td>0.900763</td>\n",
@@ -500,8 +501,8 @@
        "     alpha  Train Accuracy  Test Accuracy  Test Recall  Test Precision\n",
        "0  0.00001        0.998661       0.974443     0.920635        0.895753\n",
        "1  0.11001        0.997857       0.976074     0.936508        0.893939\n",
-       "2  0.22001        0.997857       0.977162     0.936508        0.900763\n",
-       "3  0.33001        0.997589       0.977162     0.936508        0.900763\n",
+       "2  0.22001        0.997857       0.977705     0.936508        0.904215\n",
+       "3  0.33001        0.997857       0.977162     0.936508        0.900763\n",
        "4  0.44001        0.997053       0.977162     0.936508        0.900763\n",
        "5  0.55001        0.996250       0.976618     0.936508        0.897338\n",
        "6  0.66001        0.996518       0.976074     0.932540        0.896947\n",
@@ -526,12 +527,17 @@
    "metadata": {},
    "source": [
     "Analisis para elegir\n",
+    "\n",
     "La meta de este clasificador es predecir si un email es spam o no, pero aparte del accuracy tendremos una medida muy importante presente, la precision.\n",
     "\n",
     "Por ejemplo tenemos 2 escenarios de un predict malo:\n",
+    "\n",
     "1.- Falso Positivo\n",
+    "\n",
     "    Que no era Spam y lo califico en spam\n",
+    "    \n",
     "2.- Positivo Falso\n",
+    "\n",
     "    Que si era Spam y lo califico como no spam\n",
     "\n",
     "En todo caso se prefiere la primera opcion, así que en este caso será mas importante la presicion que el recall."
@@ -560,7 +566,7 @@
    ],
    "source": [
     "best_index = models_nb['Test Precision'].idxmax()\n",
-    "models_nb.iloc[best_index, :]"
+    "models_nb.iloc[best_index]"
    ]
   },
   {
@@ -1165,7 +1171,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1178,7 +1186,7 @@
       "Actual spam                    56             196\n",
       "\n",
       "alpha             0.330010\n",
-      "Train Accuracy    0.997589\n",
+      "Train Accuracy    0.997857\n",
       "Test Accuracy     0.977162\n",
       "Test Recall       0.936508\n",
       "Test Precision    0.900763\n",
@@ -1215,6 +1223,64 @@
     "print(\"\")\n",
     "print(models_SVMs.iloc[best_index, :])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5572, 8402)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data[\"v2\"][0] = \"Will Ì_ b going to esplanade fr home?\"\n",
+    "f = feature_extraction.text.CountVectorizer(stop_words = 'english',max_features = 8402)\n",
+    "X = f.fit_transform(data[\"v2\"])\n",
+    "print(X.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predict del support vector machine\n",
+      "No es spam\n",
+      "\n",
+      "Predict de naive bayes\n",
+      "No es spam\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Predict del support vector machine\")\n",
+    "if(svc.predict(X[0]) == 0):\n",
+    "    print(\"No es spam\")\n",
+    "else:\n",
+    "    print(\"Si es spam\")\n",
+    "\n",
+    "print(\"\\nPredict de naive bayes\")\n",
+    "if(bayes.predict(X[0]) == 0):\n",
+    "    print(\"No es spam\")\n",
+    "else:\n",
+    "    print(\"Si es spam\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
