--- a/SpamDetector.ipynb
+++ b/SpamDetector.ipynb
@@ -1225,6 +1225,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para terminar escribiremos un email y veremos la eficacia de los modelos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -1242,6 +1249,13 @@
     "f = feature_extraction.text.CountVectorizer(stop_words = 'english',max_features = 8402)\n",
     "X = f.fit_transform(data[\"v2\"])\n",
     "print(X.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La parte anterior fue el preprocesamiento de los datos, ya con los datos procesados se los daremos  a los modelos para compararlos."
    ]
   },
   {
@@ -1276,11 +1290,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Este ha sido to el proyecto para clasificar correos spam."
+   ]
   }
  ],
  "metadata": {
